Introduce `AlgorithmRegistry` and refactor `Algorithm` model